# libhexplore

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yaml  release.yaml
doc/: sounds.md  st1.md
include/libhexplore/: CMakeLists.txt  StringEntry.hpp  StringTable.hpp  libhexplore.hpp
include/libhexplore/io/: IO.hpp  IOWrapper.hpp  StandardIO.hpp
src/: CMakeLists.txt  StringTable.cpp
src/io/: IO.cpp  StandardIO.cpp
tests/: CMakeLists.txt  StringTable.gtest.cpp
tests/io/: IO.gtest.cpp
tools/: CMakeLists.txt
tools/hex-st/: main.cpp
